--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/Helpers/MyHelper.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
